add logic in js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<button class="rates">1</button>
+		<button class="rates">2</button>
+		<button class="rates">3</button>
+		<button class="rates">4</button>
+		<button class="rates">5</button>
+		<button class="submit">Submit</button>
+		<p>You selected <span id="current-rate"></span> out of 5</p>
 		<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
