--- a/index.html
+++ b/index.html
@@ -19,13 +19,40 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<button class="rates">1</button>
-		<button class="rates">2</button>
-		<button class="rates">3</button>
-		<button class="rates">4</button>
-		<button class="rates">5</button>
-		<button class="submit">Submit</button>
-		<p>You selected <span id="current-rate"></span> out of 5</p>
+		<div class="active-states">
+			<div class="icon">
+				<img src="./images/icon-star.svg" alt="icon star" />
+			</div>
+			<div class="text">
+				<h1>How did we do?</h1>
+				<p>
+					Please let us know how we did with your support request. All feedback
+					is appreciated to help us improve our offering!
+				</p>
+			</div>
+			<div class="rates">
+				<button class="rate">1</button>
+				<button class="rate">2</button>
+				<button class="rate">3</button>
+				<button class="rate">4</button>
+				<button class="rate">5</button>
+			</div>
+			<button class="submit">Submit</button>
+		</div>
+		<div class="thank-you-state">
+			<div class="thanks-image">
+				<img
+					src="./images/illustration-thank-you.svg"
+					alt="thank you illustration"
+				/>
+			</div>
+			<p>You selected <span id="current-rate"></span> out of 5</p>
+			<h2>Thank you!</h2>
+			<p>
+				We appreciate you taking the time to give a rating. If you ever need
+				more support, don`t hesitate to get in touch!
+			</p>
+		</div>
 		<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
