finish  desktop app

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="active-states">
+		<div class="active-state">
 			<div class="icon">
 				<img src="./images/icon-star.svg" alt="icon star" />
 			</div>
@@ -46,7 +46,9 @@
 					alt="thank you illustration"
 				/>
 			</div>
-			<p>You selected <span id="current-rate"></span> out of 5</p>
+			<p class="selected">
+				You selected <span id="current-rate"></span> out of 5
+			</p>
 			<h2>Thank you!</h2>
 			<p>
 				We appreciate you taking the time to give a rating. If you ever need
